# count-loc-action

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.github/workflows/: count_loc.yml  docker-publish.yml  local_test.yml  remote_test.yml  rust_checks.yml
src/: formatting.rs  fs.rs  lib.rs  loc.rs  main.rs
tests/: test_loc.rs  test_matching.rs
