[package]
name = "count-loc-action"
description = "Use tokei to count lines of code in a github action"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"

[dependencies]
csv = { version = "1"}
tokei = { version = "13.0.0-alpha.0"}
lazy_static = { version = "1"}

[dev-dependencies]
tempdir = "0.3.7"